--- a/clothime/templates/admin_panel/variation.html
+++ b/clothime/templates/admin_panel/variation.html
@@ -15,6 +15,7 @@
         <h6 class="mb-4">Variation Table</h6>
         <a href="{% url 'a_add_variation' %}"><button class="btn btn-success">Add Variation</button></a>
     </div>
+    <h5>{{ count }} Found.</h5>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -45,5 +46,4 @@
         </table>
     </div>
 </div>
-
 {% endblock  %}
