--- a/clothime/templates/admin_panel/add_coupons.html
+++ b/clothime/templates/admin_panel/add_coupons.html
@@ -3,11 +3,12 @@
 {% block body %}
 
 
-<div>
-    <form action="" method="POST" enctype="multipart/form-data">
+<div class="container">
+    <h3>Add Coupons</h3><hr>
+    <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
-    <a href="{% url 'a_add_coupon' %} "> <input type="submit" class="btn btn-primary" value="Save"></a>
+    <a href="{% url 'a_add_coupon' %}"> <input type="submit" class="btn btn-primary" value="Save"></a>
     </form>
 </div>
 {% endblock body %}
