--- a/clothime/templates/admin_panel/home.html
+++ b/clothime/templates/admin_panel/home.html
@@ -62,6 +62,7 @@
                     <a href="{% url 'a_variation' %}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Variation</a>
                     <a href="{% url 'a_coupons' %}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Coupons</a>
                     <a href="{% url 'a_home_courosel' %}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Courosel</a>
+                    <a href="{% url 'a_featured_products' %}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Featured Products</a>
                 </div>
             </nav>
         </div>
