--- a/clothime/templates/admin_panel/add_featured_product.html
+++ b/clothime/templates/admin_panel/add_featured_product.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-<div>
+<div class="container">
     <h2 class="text-center">ADD FEATURED PRODUCTS</h2><hr><br>
     <form action="" method="POST">
         {% csrf_token %}
