--- a/clothime/templates/admin_panel/add_coupons.html
+++ b/clothime/templates/admin_panel/add_coupons.html
@@ -8,7 +8,7 @@
     <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
-    <a href="{% url 'a_add_coupons' %}"><input type="submit" class="btn btn-primary" value="Save"></a>
+    <a href="{% url 'a_add_coupon' %}"><input type="submit" class="btn btn-primary" value="Save"></a>
     </form>
 </div>
 {% endblock body %}
