--- a/clothime/templates/admin_panel/add_coupon.html
+++ b/clothime/templates/admin_panel/add_coupon.html
@@ -4,7 +4,7 @@
 
 
 <div class="container">
-    <h3>ADD COUPONS</h3><hr>
+    <h3>ADD COUPON</h3><hr>
     <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
