--- a/clothime/templates/admin_panel/add_home_carousel.html
+++ b/clothime/templates/admin_panel/add_home_carousel.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div>
-    <h2 class="text-center">ADD HOME CAROUSELS</h2><hr><br>
+    <h2>ADD HOME CAROUSELS</h2><hr><br>
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
      {{ form.as_p }}
