--- a/clothime/templates/admin_panel/coupons.html
+++ b/clothime/templates/admin_panel/coupons.html
@@ -2,14 +2,13 @@
 
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
+<div class="container">
     {% include 'user/alerts.html' %}
-    <div class="bg-light rounded h-100 p-4">
         <div class="d-flex justify-content-between">
         <h6 class="mb-4">Coupons Table</h6>
         <a href="{% url 'a_add_coupon' %}"><button class="btn btn-success">ADD COUPON</button></a>
     </div>
-        <table class="table table-striped">
+        <table class="table table-striped" style="width: 100%;">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
@@ -27,8 +26,8 @@
                     <td>{{x.coupon_name}}</td>
                     <td>{{ x.limit }}</td>
                     <td>{{ x.discount_amount }}</td>
-                    <td><a href="{% url 'a_edit_coupon' %}"><button class="btn btn-primary">EDIT</button></td>
-                    <td><a href="{% url 'a_delete_coupon' x.id %}"><button class="btn btn-danger" style="border-radius: 50%;">DELETE</button></a></td>
+                    <td><a href="{% url 'a_edit_coupon' x.id %}"><button class="btn btn-primary">EDIT</button></a></td>
+                    <td><a href="{% url 'a_delete_coupon' x.id %}"><button class="btn btn-danger" onclick="return confirm('Are You sure to want to delete this item')">DELETE</button></a></td>
                 </tr>
                 {% endfor %}
             </tbody>
