--- a/clothime/templates/admin_panel/edit_coupon.html
+++ b/clothime/templates/admin_panel/edit_coupon.html
@@ -2,15 +2,13 @@
 
 {% block body %}
 
-<div class="m-3">
-    <h2 class="text-center m-3">EDIT COUPON</h2><hr>
+
+<div class="container">
+    <h3>EDIT COUPON</h3><hr>
     <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
      <a href="{% url 'a_edit_coupon' coupon.id %}"><input type="submit" class="btn btn-primary" value="Save"></a>
     </form>
 </div>
-
 {% endblock body %}
-
-
