--- a/clothime/templates/admin_panel/orders.html
+++ b/clothime/templates/admin_panel/orders.html
@@ -2,17 +2,17 @@
 
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
-    <div class="bg-light rounded h-100 p-4">
+<div class="container-fluid">
+    <div class="w-100" style="width:100vh">
         {% include 'user/alerts.html' %}
         <form action="{% url 'a_order_search' %}" method="GET">
-            <div class="d-flex pb-2">
+            <div class="d-flex pb-2" style="position: sticky; top:0;">
         <input type="text" name="keyword" required class="form-control" id="" style="width: 50%;">
         <button type="submit" class="btn btn-primary px-4"><i class="fa fa-search"></i></button>
     </div>
     </form>
         <h6 class="mb-4">Orders Table</h6>
-        <table class="table table-striped">
+        <table class="table table-striped w-100">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
