--- a/templates/admin_panel/add_product.html
+++ b/templates/admin_panel/add_product.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-<div>
+<div class="container">
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
      {{ form.as_p }}
