--- a/templates/admin_panel/featured_product.html
+++ b/templates/admin_panel/featured_product.html
@@ -1,7 +1,7 @@
 {% extends 'admin_panel/home.html' %}
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
+<div class="conatainer-fluid">
     {% include 'user/alerts.html' %}
     <div class="bg-light rounded h-100 p-4">
         <div class="d-flex justify-content-between">
