--- a/templates/admin_panel/add_home_carousel.html
+++ b/templates/admin_panel/add_home_carousel.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div>
+<div class="container">
     <h2>ADD HOME CAROUSELS</h2><hr><br>
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
