--- a/templates/admin_panel/coupons.html
+++ b/templates/admin_panel/coupons.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container">
+<div class="container-fluid">
     {% include 'user/alerts.html' %}
         <div class="d-flex justify-content-between">
         <h6 class="mb-4">Coupons Table</h6>
