--- a/templates/admin_panel/edit_home_carousel.html
+++ b/templates/admin_panel/edit_home_carousel.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<div class="m-3">
-    <h2 class="text-center m-3">EDIT COUPON</h2><hr>
+<div class="container">
+    <h3 class="">EDIT COUPON</h3><hr>
     <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
