--- a/templates/admin_panel/payment.html
+++ b/templates/admin_panel/payment.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
-    <div class="bg-light rounded h-100 p-4">
+<div class="container-fluid">
+    <div class="h-100 p-4">
         <h6 class="mb-4">Payment Table</h6>
         <table class="table table-striped">
             <thead>
