--- a/templates/admin_panel/products.html
+++ b/templates/admin_panel/products.html
@@ -1,8 +1,8 @@
 {% extends 'admin_panel/home.html' %}
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
-    <div class="bg-light rounded h-100 p-4">
+<div class="container-fluid">
+    <div class="h-100 p-4">
         {% include 'user/alerts.html' %}
         <form action="{% url 'a_product_search' %}" method="GET">
             <div class="d-flex pb-2">
