--- a/clothime/templates/admin_panel/category.html
+++ b/clothime/templates/admin_panel/category.html
@@ -1,7 +1,7 @@
 {% extends 'admin_panel/home.html' %}
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
+<div class="container-fluid">
     <div class="bg-light rounded h-100 p-4">
         <form action="{% url 'a_category_search' %}" method="GET">
             <div class="d-flex pb-2">
