--- a/clothime/templates/admin_panel/order_product.html
+++ b/clothime/templates/admin_panel/order_product.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
-    <div class="bg-light rounded h-100 p-4">
+<div class="contanier-fluid">
+    <div class="h-100 p-4">
         <h6 class="mb-4">Order Product Table</h6>
         <table class="table table-striped">
             <thead>
