--- a/clothime/templates/admin_panel/variation.html
+++ b/clothime/templates/admin_panel/variation.html
@@ -2,14 +2,14 @@
 
 {% block body %}
 
-<div class="col-sm-12 col-xl-6">
+<div class="container-fluid">
     <div class="bg-light rounded h-100 p-4">
         {% include 'user/alerts.html' %}
         <div class="d-flex justify-content-between">
         <h6 class="mb-4">Variation Table</h6>
-        <a href="{% url 'a_add_variation' %}"><button class="btn btn-success">Add Variation</button></a>
+        <a href="{% url 'a_add_variation' %}"><button class="btn btn-success">ADD VARIATION</button></a>
     </div>
-    <h5>{{ count }} Found.</h5>
+    <h6>{{ count }} variations Found.</h6>
         <table class="table table-striped">
             <thead>
                 <tr>
