--- a/clothime/templates/user/profile.html
+++ b/clothime/templates/user/profile.html
@@ -13,15 +13,14 @@
     
 {% include 'user/header.html' %}
 
-    
-<div class="container">
+<div class="container m-3"style="width: auto;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <div class="row">
             <div class="col-lg-4">
                <div class="profile-card-4 z-depth-3">
                 <div class="card mx-4">
                   <div class="card-body text-center bg-primary rounded-top">
                    <div class="user-box">
-                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user avatar">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user avatar" style="width: 100px; height:100px;">
                   </div><br>
                   <h5 class="mb-1 text-white">{{ user.first_name }}</h5>
                  </div>
@@ -126,6 +125,7 @@
           </div>
         </div>
     </div>
+  </div>
     {% include 'user/footer.html' %}
 </body>
 </html>
