--- a/clothime/templates/base.html
+++ b/clothime/templates/base.html
@@ -73,7 +73,7 @@
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </button>
                     <!-- <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" class="logo" alt=""></a> -->
                 </div>
