--- a/clothime/templates/base.html
+++ b/clothime/templates/base.html
@@ -75,7 +75,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                    <!-- <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" class="logo" alt=""></a> -->
+                    <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
