--- a/clothime/templates/base.html
+++ b/clothime/templates/base.html
@@ -17,6 +17,7 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
+    <script src="https://kit.fontawesome.com/766a5d66a5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="{% static 'images/lappie4.svg' %}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
