--- a/clothime/templates/store/cart.html
+++ b/clothime/templates/store/cart.html
@@ -102,7 +102,7 @@
                         <div class="input-group input-group-sm">`
                             <input class="form-control" name="code" placeholder="Enter your coupon code" aria-label="Coupon Code" type="text">
                             <div class="input-group-append">
-                                <button class="btn btn-theme" type="submit">Apply Coupon</button>
+                                <button class="btn btn-theme btn-md-sm" type="submit">Apply Coupon</button>
                             </div>
                         </div>
                       </form>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <div class="update-box">
-                        <a href="{% url 'store' %}"><input value="by more" type="submit"></a>
+                        <a href="{% url 'store' %}"><input value="buy more" type="submit"></a>
                     </div>
                 </div>
             </div>
