--- a/clothime/templates/store/cart.html
+++ b/clothime/templates/store/cart.html
@@ -125,7 +125,7 @@
                         <h3>Order Summary</h3>
                         <div class="d-flex">
                             <h4>Sub Total</h4>
-                            <div class="ml-auto font-weight-bold"> {{ total }} </div>
+                            <div class="ml-auto font-weight-bold"> {{ total1 }} </div>
                         </div>                        
                         <div class="d-flex">
                             <h4>Tax</h4>
