--- a/clothime/templates/base.html
+++ b/clothime/templates/base.html
@@ -20,7 +20,8 @@
     <script src="https://kit.fontawesome.com/766a5d66a5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="{% static 'images/lappie4.svg' %}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
-
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Site CSS -->
@@ -67,16 +68,16 @@
     <!-- End Main Top -->
 
     <!-- Start Main Top -->
-    <header class="main-header">
+    <header class="main-header" >
         <!-- Start Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-default bootsnav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-default bootsnav" style="height: 80px;">
             <div class="container">
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" class="logo" alt=""><h2 style="color: red;">Lappie</h2></a>
+                    <a class="navbar-brand" href="{% url 'home' %}"><h2 class="text-danger">Lappie</h2></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -90,39 +91,59 @@
 
                     </ul>
                 </div>
-                <!-- /.navbar-collapse -->
 
+
+                <!-- /.navbar-collapse -->
                 <!-- Start Atribute Navigation -->
                 <div class="attr-nav d-flex justify-content-between">
                     <ul>
-                    <li class="search"><a href="#"><i class="fa fa-search fa-lg fa-md-fa pl-3 pr-3"></i></a></li>
+                    <!-- <li class="search"><a href="#"><i class="fa fa-search fa-lg fa-md-fa pl-3 pr-3"></i></a></li> -->
                         <li><a href="{% url 'cart' %}">
                             <i class="fa fa-shopping-cart fa-lg " ></i>
                             <span class="badge">{{ cart_count }}</span>
 					  </a></li>
                     <li class=""><a href="{% url 'wishlist' %}"><i class="far fa-heart fa-lg pl-3" style="color: red;"></i></a></li>
                   </ul>
-                </div>
+                </div>      
+                        
                 <!-- End Atribute Navigation -->
             </div>
+            
             <!-- End Side Menu -->
         </nav>
+        <form action="{% url 'search' %}">
+            <div class="container">
+            <div class="d-flex justify-content-center">
+            <input type="text" class="form-control" placeholder="Search Products" name="keyword">
+            <button class="btn hvr-hover w-25" type="submit"><i class="fa fa-search"></i></button>
+        </div>
+    </div>
+        </form> 
         <!-- End Navigation -->
     </header>
+    <!-- <form action="{% url 'a_user_search' %}" method="GET">
+        <div class="d-flex pb-2">
+    <input type="text" name="keyword" class="form-control" placeholder="Search" id="" style="width: 50%;">
+    <button type="submit" class="btn btn-primary px-4"><i class="fa fa-search"></i></button>
+</div>
+</form>
+    -->
     <!-- End Main Top -->
 
     <!-- Start Top Search -->
-    <div class="top-search">
+    <!-- <div class="top-search">
         <div class="container">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                <form action="{% url 'search' %}" method="GET" class="d-flex"><input type="text" class="form-control" placeholder="Search Products" name="keyword">
-                <!-- <div class=""><span class="input-group-addon close-search"><i class="fa fa-times"></i></span></div> -->
+                <form action="{% url 'search' %}" method="GET" class="d-flex">
+                    <input type="text" class="form-control" placeholder="Search Products" name="keyword">
                 <button class="btn hvr-hover text-white">Search</button>
               </form>
             </div>
         </div>
-    </div>
+    </div> -->
+
+    
     <!-- End Top Search -->
     {% block body %}
 
