--- a/clothime/templates/store/cart.html
+++ b/clothime/templates/store/cart.html
@@ -125,11 +125,11 @@
                         <h3>Order Summary</h3>
                         <div class="d-flex">
                             <h4>Sub Total</h4>
-                            <div class="ml-auto font-weight-bold"> {{ total }} </div>
+                            <div class="ml-auto font-weight-bold"> ₹ {{ total }} </div>
                         </div>                        
                         <div class="d-flex">
                             <h4>Tax</h4>
-                            <div class="ml-auto font-weight-bold">{{ tax }}</div>
+                            <div class="ml-auto font-weight-bold">₹ {{ tax }}</div>
                         </div>
                         <div class="d-flex">
                             <h4>Shipping Cost</h4>
@@ -137,12 +137,12 @@
                         </div>
                         <div class="d-flex">
                             <h4>Discount</h4>
-                            <div class="ml-auto font-weight-bold"> {{ discount }} </div>
+                            <div class="ml-auto font-weight-bold"> ₹ {{ discount }} </div>
                         </div>
                         <hr>
                         <div class="d-flex gr-total">
                             <h5>Grand Total</h5><br>
-                            <div class="ml-auto h5"> {{ grand_total }}/- </div>
+                            <div class="ml-auto h5">₹ {{ grand_total }}/- </div>
                         </div>
                         <hr> </div>
                 </div>
