--- a/clothime/templates/store/checkout.html
+++ b/clothime/templates/store/checkout.html
@@ -26,50 +26,6 @@
 
     <!-- Start Cart  -->
     <div class="cart-box-main">
-
-        <div class="container-fluid">
-            <div class="row new-account-login">
-                <!-- <div class="col-sm-6 col-lg-6 mb-3">
-                    <div class="title-left">
-                        <h3>Account Login</h3>
-                    </div>
-                    <h5><a data-toggle="collapse" href="#formLogin" role="button" aria-expanded="false">Click here to Login</a></h5>
-                    <form class="mt-3 collapse review-form-box" id="formLogin">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="InputEmail" class="mb-0">Email Address</label>
-                                <input type="email" class="form-control" id="InputEmail" placeholder="Enter Email"> </div>
-                            <div class="form-group col-md-6">
-                                <label for="InputPassword" class="mb-0">Password</label>
-                                <input type="password" class="form-control" id="InputPassword" placeholder="Password"> </div>
-                        </div>
-                        <button type="submit" class="btn hvr-hover">Login</button>
-                    </form>
-                </div> -->
-                <!-- <div class="col-sm-6 col-lg-6 mb-3">
-                    <div class="title-left">
-                        <h3>Create New Account</h3>
-                    </div>
-                    <h5><a data-toggle="collapse" href="#formRegister" role="button" aria-expanded="false">Click here to Register</a></h5>
-                    <form class="mt-3 collapse review-form-box" id="formRegister">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="InputName" class="mb-0">First Name</label>
-                                <input type="text" class="form-control" id="InputName" placeholder="First Name"> </div>
-                            <div class="form-group col-md-6">
-                                <label for="InputLastname" class="mb-0">Last Name</label>
-                                <input type="text" class="form-control" id="InputLastname" placeholder="Last Name"> </div>
-                            <div class="form-group col-md-6">
-                                <label for="InputEmail1" class="mb-0">Email Address</label>
-                                <input type="email" class="form-control" id="InputEmail1" placeholder="Enter Email"> </div>
-                            <div class="form-group col-md-6">
-                                <label for="InputPassword1" class="mb-0">Password</label>
-                                <input type="password" class="form-control" id="InputPassword1" placeholder="Password"> </div>
-                        </div>
-                        <button type="submit" class="btn hvr-hover">Register</button>
-                    </form>
-                </div> -->
-            </div>
             {% include 'user/alerts.html' %}
             <div class="row">
                 <div class="col-sm-6 col-lg-6 mb-3">
@@ -137,59 +93,7 @@
                              </div>
                             </div>
                     </form>
-
-                            <!-- <div class="title"> <span>Payment</span> </div> -->
-                            <!-- <div class="d-block my-3">
-                                <div class="custom-control custom-radio">
-                                    <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                                    <label class="custom-control-label" for="credit">Credit card</label>
-                                </div>
-                                <div class="custom-control custom-radio">
-                                    <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                    <label class="custom-control-label" for="debit">Debit card</label>
-                                </div>
-                                <div class="custom-control custom-radio">
-                                    <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                    <label class="custom-control-label" for="paypal">Paypal</label>
-                                </div>
-                            </div> -->
-                            <!-- <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="cc-name">Name on card</label>
-                                    <input type="text" class="form-control" id="cc-name" placeholder="" required> <small class="text-muted">Full name as displayed on card</small>
-                                    <div class="invalid-feedback"> Name on card is required </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="cc-number">Credit card number</label>
-                                    <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                                    <div class="invalid-feedback"> Credit card number is required </div>
-                                </div>
-                            </div> -->
-                            <!-- <div class="row">
-                                <div class="col-md-3 mb-3">
-                                    <label for="cc-expiration">Expiration</label>
-                                    <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                                    <div class="invalid-feedback"> Expiration date required </div>
-                                </div>
-                                <div class="col-md-3 mb-3">
-                                    <label for="cc-expiration">CVV</label>
-                                    <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                                    <div class="invalid-feedback"> Security code required </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <div class="payment-icon">
-                                        <ul>
-                                            <li><img class="img-fluid" src="images/payment-icon/1.png" alt=""></li>
-                                            <li><img class="img-fluid" src="images/payment-icon/2.png" alt=""></li>
-                                            <li><img class="img-fluid" src="images/payment-icon/3.png" alt=""></li>
-                                            <li><img class="img-fluid" src="images/payment-icon/5.png" alt=""></li>
-                                            <li><img class="img-fluid" src="images/payment-icon/7.png" alt=""></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div> -->
                     </div>
-                <!-- </div> -->
                 <div class="col-sm-6 col-lg-6 mb-3">
                     <div class="row">
                         <div class="col-md-12 col-lg-12">
@@ -221,13 +125,13 @@
                                                 </p>
                                               </td>
                                             <td class="quantity-bo  ">
-                                               <label for="">{{ cart_item.quantity }} </label>
+                                               <label for="">₹ {{ cart_item.quantity }} </label>
                                             </td>
                                             <td class="total-pr">
-                                               <p>{{ cart_item.product.price }}</p>
+                                               <p>₹ {{ cart_item.product.price }}</p>
                                             </td>
                                             <td>
-                                                <p>{{ cart_item.sub_total }}</p>
+                                                <p>₹ {{ cart_item.sub_total }}</p>
                                             </td>
                                         </tr>
                                       {% endfor %}
@@ -244,7 +148,7 @@
                         <br>
                         {% for x in address %}
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="address" value="{{ x.id }}">
+                            <input class="form-check-input" type="radio" name="address" checked value="{{ x.id }}">
                             <label class="form-check-label" for="flexRadioDefault1">
                               {{ x.first_name }} {{ x.last_name }}<br>
                               {{ x.address_line_1 }}<br>Ph:{{ x.phone }},
@@ -253,10 +157,6 @@
                             </label>
                           </div><br><hr>
                           {% endfor %}
-                          <!-- <div class="d-flex justify-content-around">
-                          <p><b>Amont :</b></p>
-                          <p class="d-flex "><b>{{ grand_total }}</b></p>
-                        </div><br> -->
                            <div class="d-flex justify-content-center">
                         <button type="submit"  class="btn hvr-hover text-white w-50">Place Order</button> 
                     </div>
