--- a/clothime/templates/store/store.html
+++ b/clothime/templates/store/store.html
@@ -81,7 +81,7 @@
                                 {% if product_count > 0 %}
                                 <p><b>Showing all {{ product_count }} results</b></p>
                                 {% else %}
-                                   <p>No Products Found</p>                                    
+                                   <p>No Products Found</p>
                                 {% endif %}
                             </div>
                             <!-- <div class="col-12 col-sm-4 text-center text-sm-right">
@@ -123,6 +123,7 @@
                                                 {% endfor %}
                                                 {% else %}
                                                 <div class="d-flex justify-content-center"><h1 class="">No Products Found!</h1></div>                                                    
+                                                <img src="https://thumbs.dreamstime.com/b/cartoon-red-bug-lady-showing-nothing-isolated-99626926.jpg" alt="" style="width: 50%; height:70%">                                      
                                                 {% endif %}
                                             </div>
                                         </div>
