--- a/clothime/templates/store/store.html
+++ b/clothime/templates/store/store.html
@@ -104,7 +104,7 @@
                                       
                                         {% for product in products %}
                                             
-                                        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                                        <div class="col-sm-6 col-md-4 col-lg-4 col-6 col-xl-4">
                                             <div class="products-single fix">
                                                 <div class="box-img-hover">
                                                     <div class="type-lb">
