--- a/clothime/templates/admin_panel/edit_home_carousel.html
+++ b/clothime/templates/admin_panel/edit_home_carousel.html
@@ -7,7 +7,7 @@
     <form action="" method="POST">
         {% csrf_token %}
      {{ form.as_p }}
-     <a href="{% url 'a_edit_home_carousel' coupon.id %}"><input type="submit" class="btn btn-primary" value="Save"></a>
+     <a href="{% url 'a_edit_home_carousel' carousel.id %}"><input type="submit" class="btn btn-primary" value="Save"></a>
     </form>
 </div>
 
