--- a/clothime/templates/home.html
+++ b/clothime/templates/home.html
@@ -5,7 +5,7 @@
 
     <!-- Start Slider -->
     <div id="slides-shop" class="cover-slides">
-        <ul class="slides-container">
+        <ul class="slides-container" style="height:50%">
             <li class="text-left">
                 <img src="{{ home_carousel1.image.url }}" alt="">
                 <div class="container">
