--- a/clothime/templates/base.html
+++ b/clothime/templates/base.html
@@ -185,13 +185,13 @@
                             <h4>Contact Us</h4>
                             <ul>
                                 <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: calicut <br>kinfra park,<br> 673620 </p>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address: somewhere <br>on earth,<br> 000000 </p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: 8592962536<a href=""></a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: 1234567890<a href=""></a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="">muhammedmuneeb3215@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="">sample123@gmail.com</a></p>
                                 </li>
                             </ul>
                         </div>
