--- a/clothime/templates/store/checkout.html
+++ b/clothime/templates/store/checkout.html
@@ -25,7 +25,7 @@
     <!-- End All Title Box -->
 
     <!-- Start Cart  -->
-    <div class="cart-box-main">
+    <div class="cart-box-main mx-3">
             {% include 'user/alerts.html' %}
             <div class="row">
                 <div class="col-sm-6 col-lg-6 mb-3">
